--- a/UPSEmployeeUI/Src/MainWindow.xaml
+++ b/UPSEmployeeUI/Src/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<NavigationWindow x:Class="UPSAssessment.UPSEmployeeUI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" Name="NavigationWindowEmployeeInformationSystem"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" ShowsNavigationUI="False" WindowState="Maximized" WindowStartupLocation="CenterScreen"
         Title="Employee Information System" Height="450" Width="800" Closing="NavigationWindow_Closing">
