--- a/UPSEmployeeUI/Src/UpdateEmployeePage.xaml
+++ b/UPSEmployeeUI/Src/UpdateEmployeePage.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       mc:Ignorable="d" xmlns:local="clr-namespace:UPSEmployeeLib.ViewModel;assembly=UPSEmployeeLib"
       d:DesignHeight="200" d:DesignWidth="700" HorizontalAlignment="Center" VerticalAlignment="Stretch" Height="200" Width="700"
-      Title="UpdateEmployeePage" Name="PageEmployeeUpdate" Margin="0,0,0,0">
+      Title="Updating Employee Details" Name="PageEmployeeUpdate" Margin="0,0,0,0">
     <Page.Resources>
         <DataTemplate DataType="{x:Type local:EmployeeViewModelUpdate}" />
         <local:BooleanToStringValueConverter x:Key="booleanToStringValueConverter" />
@@ -34,7 +34,7 @@
             <Label Name="LabelEmployeeId" Content="Employee Id" FontWeight="Bold" HorizontalAlignment="Left" Margin="38,14,0,0" VerticalAlignment="Top" VerticalContentAlignment="Center" FontSize="14" />
             <TextBox Name="TextBoxEmployeeId" TabIndex="0" HorizontalAlignment="Stretch" Height="30" Margin="211,14,170,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="Auto" FontSize="14" Visibility="Visible" />
 
-            <Button Name="ButtonFind" TabIndex="1" Content="Find" HorizontalAlignment="Right" VerticalAlignment="Top" Height="30"  FontSize="14" Margin="0,14,45,0" Width="120" IsEnabled="True" Grid.Column="0" Click="ButtonEdit_Click" />
+            <Button Name="ButtonFind" TabIndex="1" Content="Find" HorizontalAlignment="Right" VerticalAlignment="Top" Height="30"  FontSize="14" Margin="0,14,45,0" Width="120" IsEnabled="True" Grid.Column="0" Click="ButtonFind_Click" />
 
             <Label Name="LabelEmployeeName" Content="Employee Name" FontWeight="Bold" HorizontalAlignment="Left" Margin="38,49,0,0" VerticalAlignment="Top" VerticalContentAlignment="Center" FontSize="14" />
             <TextBox Name="TextBoxEmployeeName" TabIndex="1" Text="{Binding EmployeeName, Mode=TwoWay}" HorizontalAlignment="Stretch" Height="30" Margin="211,49,45,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="Auto" FontSize="14" VerticalScrollBarVisibility="Auto" />
